--- a/rancid/man/par.1
+++ b/rancid/man/par.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "par" "1" "17 December 2012"
+.TH "par" "1" "15 January 2014"
 .SH NAME
 par \- parallel command processing
 .SH SYNOPSIS
@@ -74,7 +74,7 @@ Split args on spaces and exec, rather than using sh -c.
 .\"
 .TP
 .B \-f
-No file or STDIN, just run a quantity of the command specified with -c.
+No input file or STDIN, just run a quantity of the command specified with -c.
 .\"
 .TP
 .B \-i
