--- a/rancid/man/par.1
+++ b/rancid/man/par.1
@@ -135,6 +135,4 @@ epoch and N is the par process number ([0..]).
 .\"
 .SH "HISTORY"
 .B par
-was ported from the perl version used with
-.B rancid
-(http://www.shrubbery.net/rancid) with a few new options.
+was ported from the perl version.
