junos.pm: filter primary/secondary on SRX - Frank Eargle

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.0a4
+	junos.pm: filter primary/secondary on SRX - Frank Eargle
+
 	par: replace par with C version
 
 	rancid.types.conf: allow multiple module lines for device type
