--- a/rancid/README
+++ b/rancid/README
@@ -2,6 +2,9 @@ Rancid is a "Really Awesome New Cisco confIg Differ" developed to
 maintain CVS controlled copies of router configs.
 
 *** The Following Information is Very Important ****
+Rancid 3.0 converts several device scripts (the remaining will follow) to
+libraries used by grancid.
+
 Rancid 2.3 introduces a new directory layout.  It has been changed to more
 closely follow the standard path hierarchy, which is defined by the FHS
 standard and autoconf, and/or make these locations more easily configurable
@@ -216,12 +219,12 @@ Quick Installation Guide (an example):
    IOS) code.
 
    e.g.: <localstatedir>/<group>/router.db:
-	cisco-router.domain.com:cisco:up
-	adc-mux.domain.com:ezt3:up
-	foundry-switch-router.domain.com:foundry:up
-	juniper-router.domain.com:juniper:up
-	redback-dsl-router.domain.com:redback:down
-	extreme-switch.domain.com:extreme:down
+	cisco-router.domain.com;cisco;up
+	adc-mux.domain.com;ezt3;up
+	foundry-switch-router.domain.com;foundry;up
+	juniper-router.domain.com;juniper;up
+	redback-dsl-router.domain.com;redback;down
+	extreme-switch.domain.com;extreme;down
 
 9) For first-time users or new installations, run bin/rancid-run (with no
    arguments) and check the resulting log file(s) (in logs/*) for errors.
