--- a/rancid/README
+++ b/rancid/README
@@ -3,7 +3,7 @@ maintain CVS controlled copies of router configs.
 
 *** The Following Information is Very Important ****
 Rancid 3.0 converts several device scripts (the remaining will follow) to
-libraries used by grancid.
+libraries used by the single script, named rancid, to parse device output.
 
 Rancid 2.3 introduces a new directory layout.  It has been changed to more
 closely follow the standard path hierarchy, which is defined by the FHS
@@ -61,7 +61,6 @@ bin/
 	f5rancid.in	Version of rancid.in for F5 BigIPs.
 	fnrancid.in	Version of rancid.in for Fortinet Firewalls.
 	francid.in	Version of rancid.in for Foundry switches.
-	grancid.in	Version of rancid.in that is generic w/ specific libs.
 	hrancid.in	Version of rancid.in for HP Procurve switches.
 	htrancid.in	Version of rancid.in for Hitatchi routers.
 	jerancid.in	Version of rancid.in for Juniper E-series routers.
