--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.0a6
+	grancid: rename to rancid, now that the IOS script is converted and
+	to reduce confusion.
+
 	rancid.pm: fix syntax error
 
 	hrancid: filter uptime from show stack - Alan McKinnon
