ios.pm: update XE match for XE 3.11.00.S - Jan Rheindorf

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.0a6
+	ios.pm: update XE match for XE 3.11.00.S - Jan Rheindorf
+
 	grancid: rename to rancid, now that the IOS script is converted and
 	to reduce confusion.
 
