--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,8 @@
-3.0a6
+3.0a7
+	ios.pm: show flash on 867VAE w/ 15.3(3)M2 produces the same output as
+	dir slotN: on "normal" ios, so filtering fials - reported by Reuben
+	Farrelly
+
 	ios.pm: change $type comparisons to eq - reported by Reuben Farrelly
 
 	junos.pm: filter MX2020 fan speed
