--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.1
+	dell.pm: missing variable declarations
+
 	nxrancid: filter INTAKE temps and cycling file BufferMonitor-1HourData -
 	reported by Vincent Aniello
 
