--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.1
+	rancid: display useful error if inloop is not configured
+
 	dell.pm: missing variable declarations
 
 	nxrancid: filter INTAKE temps and cycling file BufferMonitor-1HourData -
