--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.1
+	ios.pm: bgp password filtering removing neighbor address
+
 	rancid.types.base: dell definition missing inloop configuration
 
 	rancid: display useful error if inloop is not configured
