add perl version comment to README

--- a/README
+++ b/README
@@ -4,6 +4,7 @@ maintain CVS controlled copies of router configs.
 *** The Following Information is Very Important ****
 Rancid 3.0 converts several device scripts (the remaining will follow) to
 libraries used by the single script, named rancid, to parse device output.
+It also requires perl 5.10 minimum.
 
 Rancid 2.3 introduces a new directory layout.  It has been changed to more
 closely follow the standard path hierarchy, which is defined by the FHS
