--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.1
+	srancid: fix up time filter for dell 3448
+
 	ios.pm: some ASAs do not support show vlan
 
 	ios.pm: bgp password filtering removing neighbor address
