--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.1
+	ios.pm: filter fan speed setting on 2900, etc.
+
 	fnrancid: fix filter match for encrypted pwd
 
 	ios.pm: filter vlan traffic counters on gsr, 6400 & switches
