--- a/man/rancid.1
+++ b/man/rancid.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid" "1" "12 February 2014"
+.TH "rancid" "1" "8 July 2014"
 .SH NAME
 rancid \- Cisco configuration filter
 .SH SYNOPSIS
@@ -80,8 +80,8 @@ F5 BigIPs
 Fortinet Firewalls
 .TP
 .B rancid
-The generic rancid script; supporting Cisco IOS, Cisco IOS-XR, Dell switches,
-Compass EOS, and Juniper JUNOS.
+The generic rancid script; supporting Allied Telesis AW+ devices, Cisco IOS,
+Cisco IOS-XR, Dell switches, Compass EOS, and Juniper JUNOS.
 It uses the device O/S modules for parsing routines.
 See
 .BR rancid (3)
