--- a/rancid/man/clogin.1
+++ b/rancid/man/clogin.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "clogin" "1" "17 September 2014"
+.TH "clogin" "1" "25 September 2014"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -68,7 +68,7 @@ Netscreen firewalls,
 Netscaler,
 Riverstone,
 Netopia,
-Lucent TNT,
+Cisco WLCs
 and Xirrus arrays,
 named
 .B alogin,
@@ -86,7 +86,7 @@ named
 .B nslogin,
 .B rivlogin,
 .B tlogin,
-.B tntlogin,
+.B wlogin,
 and
 .B xilogin,
 respectively.
