--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "15 July 2014"
+.TH "router.db" "5" "25 September 2014"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -181,8 +181,8 @@ A Riverstone NAS or Cabletron (starting with version ~9.0.3) router.
 A SMC switch (some Dell OEMs).
 .TP
 .ID 15n
-.B tnt
-A Lucent TNT.
+.B ciscowlc
+A Cisco WLC.
 .TP
 .ID 15n
 .B xirrus
