--- a/man/cloginrc.5
+++ b/man/cloginrc.5
@@ -2,7 +2,7 @@
 .\" $Id$
 .\"
 .hys 50
-.TH "cloginrc" "5" "23 December 2013"
+.TH "cloginrc" "5" "25 September 2014"
 .SH NAME
  \.cloginrc \- clogin configuration file
 .SH DESCRIPTION
@@ -20,7 +20,7 @@ contains configuration information for
 .BR nslogin (1),
 .BR rivlogin (1),
 and
-.BR tntlogin (1),
+.BR wlogin (1),
 such as usernames, passwords, ssh encryption type, etc., and is read at
 run-time.
 .PP
