nxos.pm: does not set $proc - lee.e.rian
results:
@@ -1,11 +1,11 @@
  !RANCID-CONTENT-TYPE: cisco-nx
  !
- !Chassis type:  - a NXOS router
+ !Chassis type: Nexus7000 - a NXOS router
  !Hardware: cisco Nexus7000 C7010 (10 Slot) Chassis ("Supervisor Module-1X")
 
 
@@ -1,11 +1,11 @@
  !RANCID-CONTENT-TYPE: cisco-nx
  !
- !Chassis type:  - a NXOS router
+ !Chassis type: Nexus5548 - a NXOS router
  !Hardware: cisco Nexus5548 Chassis ("O2 32X10GE/Modular Supervisor")
 
 
@@ -1,11 +1,11 @@
  !RANCID-CONTENT-TYPE: cisco-nx
  !
- !Chassis type:  - a NXOS router
+ !Chassis type: Nexus 4000 - a NXOS router
  !Hardware: cisco Nexus 4000 Chassis ("20x10GE/supervisor")

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2
+	nxos.pm: does not set $proc - lee.e.rian
+
 	nxrancid: convert nexus to module nxos.pm
 
 	ios.pm: save "next reload" template - lee.e.rian
