--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.2
+	*login.in; fix handling of empty lines in -x input - reported by
+	lee.e.rian
+
 	nxos.pm: recognize invalid command in ShowFex - lee.e.rian
 
 	nxos.pm: does not set $proc - lee.e.rian
