--- a/rancid/man/rancid.1
+++ b/rancid/man/rancid.1
@@ -78,8 +78,8 @@ Fortinet Firewalls
 .TP
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices, Arbor
-Networks Appliances, Cisco IOS, Cisco IOS-XR, Dell switches, Compass EOS,
-and Juniper JUNOS.
+Networks Appliances, Cisco IOS, Cisco IOS-XR, Cisco WLC, Dell switches,
+Compass EOS, and Juniper JUNOS.
 It uses the device O/S modules for parsing routines.
 See
 .BR rancid (3)
