--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "25 September 2014"
+.TH "router.db" "5" "10 October 2014"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -87,6 +87,10 @@ A Cisco Nexus switch/router.
 .ID 15n
 .B cisco-xr
 A Cisco device running IOS-XR.
+.TP
+.ID 15n
+.B cisco-wlc
+A Cisco Wireless Controller.
 .TP
 .ID 15n
 .B css
