--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,5 +1,5 @@
 3.2
-	rancid.pm: improve IP sorting w/ Net::IP, esp for IPv6
+	rancid.pm: improve IP sorting, esp for IPv6
 
 	ios.pm: filter show flash & dir bytes free better
 
