--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "router.db" "5" "10 October 2014"
+.TH "router.db" "5" "25 November 2014"
 .SH NAME
 router.db \- rancid group configuration file
 .SH DESCRIPTION
@@ -167,6 +167,10 @@ A Netscalar load balancer.
 .ID 15n
 .B netscreen
 A Netscreen firewall.
+.TP
+.ID 15n
+.B paloalto
+A Palo Alto Networks device.
 .TP
 .ID 15n
 .B procket
