nxos.pm: filter ASIC/INTAKE cycling temps - Vincent Aniello
@@ -76,9 +76,9 @@
  !Env:  Sensor     MajorThresh   CurTemp
  !Env:             (Celsius)     (Celsius)
  !Env: ------------------------------------------------
  !Env:  ASIC       95            59
- !Env:  INTAKE     45            28
+ !Env:  INTAKE     45            27
  !Env: ------------------------------------------------
  !Env:  Monitor Temperature
  !Env: ---------------------------------------------------------
  !Env:  Sensor     MajorThresh   MinorThres   Status

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2
+	nxos.pm: filter ASIC/INTAKE cycling temps - Vincent Aniello
+
 	panos.pm: convert panrancid to a module
 
 	panlogin, panrancid: import palo alto network script from Doug Hughes
