--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2
+	iosxr.pm: access-list/prefix-list sorting regex fixes
+
 	ios.pm: access-list/prefix-list sorting regex fixes
 
 	nxos.pm: filter ASIC/INTAKE cycling temps - Vincent Aniello
