If the RCS is svn, run svn cleanup after the commit to clean-up temporary files and etc that can grow quite large over time.

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.2
+	control_rancid: svn cleanup after collection commits
+
 	iosxr.pm: access-list/prefix-list sorting regex fixes
 
 	ios.pm: access-list/prefix-list sorting regex fixes
