Add note about UPGRADING file to the git changelog

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 3.2
-	add support for git based on Jeffrey C. Ollie's patch & thanks Dan Lowe,
-	Job Snijders and a number of folks on rancid-discuss
+	add support for git.  See the UPGRADING file.  Based on Jeffrey C.
+	Ollie's patch & thanks Dan Lowe, Job Snijders and a number of folks on
+	rancid-discuss.
 
 	rancid-cvs: add -f option
 
