--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.1.99
+	FAQ: updates - Thomas Greer
+
 	ios.pm: drop the fabricated portion of the "Chassis type:" line; its
 	too much to try to track it accurately and doesnt seem to provide any
 	value
